--- a/feeds.toml
+++ b/feeds.toml
@@ -2,7 +2,7 @@
 title = "Superorganizers"
 url = "https://every.to/superorganizers?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -12,7 +12,7 @@ timeout = 120
 title = "Praxis"
 url = "https://every.to/praxis?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -22,7 +22,7 @@ timeout = 120
 title = "Almanack"
 url = "https://every.to/almanack?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -32,7 +32,7 @@ timeout = 120
 title = "Cybernaut"
 url = "https://every.to/cybernaut?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -42,7 +42,7 @@ timeout = 120
 title = "Divinations"
 url = "https://every.to/divinations?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -52,7 +52,7 @@ timeout = 120
 title = "Napkin Math"
 url = "https://every.to/napkin-math?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -62,7 +62,8 @@ timeout = 120
 title = "Means of Creation"
 url = "https://every.to/means-of-creation?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -72,7 +73,7 @@ timeout = 120
 title = "Free Radicals"
 url = "https://every.to/free-radicals?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -82,7 +83,7 @@ timeout = 120
 title = "Ask Jerry"
 url = "https://every.to/ask-jerry?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -92,7 +93,7 @@ timeout = 120
 title = "Talk Therapy"
 url = "https://every.to/talk-therapy?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -102,7 +103,7 @@ timeout = 120
 title = "Glassy"
 url = "https://every.to/Glassy?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -112,7 +113,7 @@ timeout = 120
 title = "The Long Conversation"
 url = "https://every.to/the-long-conversation?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
@@ -122,7 +123,7 @@ timeout = 120
 title = "The Prediction Game"
 url = "https://every.to/the-prediction-game?sort=newest"
 entrySelector = ".post-preview"
-titleSelector = ".post-title"
+titleSelector = "h2.post-title"
 linkSelector = "a.post-cover"
 contentSelector = ".post-preview-text"
 onFail = "stale"
