--- a/feeds.toml
+++ b/feeds.toml
@@ -158,3 +158,14 @@ dateSelector = "article.post > .post-header > .post-meta > time"
 dateFormat = "dd MMM yyyy"
 onFail = "stale"
 timeout = 120
+
+[SolidityDeveloper]
+title = "Solidity Developer"
+url = "https://soliditydeveloper.com/blog"
+entrySelector = ".blog-timeline .blog-timeline--body"
+titleSelector = ".blog-timeline .blog-timeline--body h3"
+linkSelector = ".blog-timeline .blog-timeline--body h3 a"
+contentSelector = ".blog-timeline .blog-timeline--body h4"
+dateSelector = ".blog-timeline time"
+onFail = "stale"
+timeout = 120
