--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,6 +19,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3.0.2
     - uses: microsoft/playwright-github-action@v1.5.1
+    - run: npx playwright install
     - run: npx feed-me-up-scotty
     - name: Deploy to GitHub Pages
       run: |
