--- a/feeds.toml
+++ b/feeds.toml
@@ -185,7 +185,7 @@ timeout = 120
 title = "NFX"
 url = "https://www.nfx.com/"
 entrySelector = "ul.essays-listing > li"
-titleSelector = "ul.essays-listing > li h5"
-linkSelector = "ul.essays-listing > li h5 a"
+titleSelector = "h5"
+linkSelector = "h5 a"
 onFail = "stale"
 timeout = 120
