--- a/feeds.toml
+++ b/feeds.toml
@@ -1,13 +1,3 @@
-[SolidityDeveloper]
-title = "Solidity Developer"
-url = "https://soliditydeveloper.com/blog"
-entrySelector = ".blog-timeline .blog-timeline--body"
-titleSelector = "h3"
-linkSelector = "h3 a"
-contentSelector = "h4"
-onFail = "stale"
-timeout = 120
-
 [toniwahrstaetter]
 title = "Anton Wahrstätter's Blog"
 url = "https://blog.toniwahrstaetter.com/"
@@ -16,5 +6,5 @@ titleSelector = "h3"
 linkSelector = "h3 a"
 dateSelector = "span"
 dateFormat = "MMM d, YYYY"
-onFail = "stale"
+onFail = "error"
 timeout = 120
