--- a/feeds.toml
+++ b/feeds.toml
@@ -29,3 +29,16 @@ titleSelector = "a"
 linkSelector = "a"
 onFail = "error"
 timeout = 120
+
+
+[graffioh]
+title = "graffioh's blog"
+url = "https://graffioh.com/blog/"
+entrySelector = "ul > li"
+titleSelector = "a"
+linkSelector = "a"
+dateSelector = "p"
+dateFormat = "dd-MM-yyyy"
+onFail = "error"
+timeout = 120
+
